# rpc-plugin-s3-read-processor-example

./: README.md  connect_dynamic.yaml  connect_s3_input_and_processor.yaml  connect_static.yaml  pyproject.toml  rpcn-s3-change_monitor-input.py  rpcn-s3-read-processor.py  s3-object-read-processor.yaml  s3_monitor_input.yaml
