[project]
name = "s3-read-processor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aioboto3==15.0.0",
    "aiobotocore==2.23.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "boto3==1.38.27",
    "botocore==1.38.27",
    "frozenlist==1.7.0",
    "grpcio==1.73.1",
    "idna==3.10",
    "jmespath==1.0.1",
    "multidict==6.6.3",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "redpanda-connect==0.1.2",
    "requests>=2.32.4",
    "s3transfer==0.13.0",
    "six==1.17.0",
    "urllib3==2.5.0",
    "wrapt==1.17.2",
    "yarl==1.20.1",
]
